--- a/nginx.conf
+++ b/nginx.conf
@@ -31,6 +31,7 @@ http {
     error_log /var/log/app_engine/app.log;
 
     gzip on;
+    gzip_types text/css text/javascript;
     gzip_disable "msie6";
 
     server {
